# PokeCallBunny

./: .coverage  .gitignore  Development notes.txt  README.md  core.py  database_generator.py  database_setup.sql  form_collector.py  main.py  megas_list.txt  pokemon-data.json  pokemon.db  pokemondb.sql  pyproject.toml  test_main.py
website/: index.html
